*    Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
*
*/

2016-06-30 Bjorn Rohde Jensen
		* Release 6.x.x
		* Renamed module from sbcasserver to casserver.
		* Added composer file to make module installable according to simplesamlphp guidelines.
		* Replaced use of deprecated SimpleSAMLphp api's.

2014-10-15 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
        * Release 5.2.3
        * Added a missing linefeed character in the CAS 1.0 ticket validation failure response.

2014-03-17 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
        * Release 5.2.2
        * Fixed a bug where the sanitized forms of url parameters were used for more than validation.
        * Fixed a bug in the sanitizer logic to remove ';jsessionid' from urls.

2014-02-27 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
        * Release 5.2.1
        * Fixed a bug where attributes containing colons in their names caused serviceValidate to return invalid xml.

2014-02-25 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
        * Release 5.2.0
        * Removed hardcoded removal of attributes starting with urn:oid.
        * Added a logged in landing page in case the client does not provide a service url.
        * It is now possible to add an attribute indicating whether the attributes are base64 encoded or not.

2014-02-07 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
        * Release 5.1.0
        * Fixed a bug where the 'url' parameter was required even when displaying a logged out page.
        * Fixed a bug where attribute transfer could not be disabled.
        * Added support for specifying which attributes to transfer.
        * Added support for specifying a named subset of IdPs allowing clients to restrict the list of IdPs in the
          wayf step.

2013-11-04 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
        * Release 5.0.0
        * Removed support for storing tickets in proprietary key-value store AttributeStore.